# cherrymusic-rewrite

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  README.md  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
cherrymusic/: __main__.py  data.py  database.py  files.py  types.py  validation.py
cherrymusic/common/: __init__.py  types.py
cherrymusic/common/test/: helpers.py  test_types.py
cherrymusic/core/: __init__.py  components.py
cherrymusic/core/test/: test_components.py
cherrymusic/database/: __init__.py  components.py  sqlite.py
cherrymusic/database/test/: test_sqlite.py
cherrymusic/media/: __init__.py  data.py  files.py
cherrymusic/media/migrations/: 0001_initial.py
cherrymusic/media/test/: test_files.py
cherrymusic/test/: helpers.py  test_data.py  test_database.py  test_files.py  test_types.py
