[metadata]
name = cherrymusic-rwrt
description = An experimental project to rewrite CherryMusic in modern Python
description-file = README.md
author = tilboerner
author-email = til
license = MIT

[pbr]
skip_authors = true
skip_changelog = true

[tool:pytest]
norecursedirs = venv .tox .eggs
addopts =

[pycodestyle]
max-line-length = 100
statistics = true
show-source = true
exclude = .tox,.eggs

[pydocstyle]
add_ignore = D1,D400
match = (?!setup).*.py
match-dir = (?!test|venv|docs|\.).*

[coverage:run]
source = cherrymusic
branch = False
omit =
    .tox
    ./setup.py
    venv
    docs

[coverage:report]
fail_under = 90
skip_covered = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

[isort]
atomic = True
combine_as_imports = true
multi_line_output = 5
line_length = 100
skip = docs,venv,.tox,.eggs
not_skip = __init__.py
known_first_party = cherrymusic
default_section=THIRDPARTY
